--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
-}
+html {
+  background-color: rgb(26, 53, 93);
+  height: 100vh;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: #488ead #1a355d;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 9px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #1a355d;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #488ead;
+    border-radius: 11px;
+    border: 3px none #ffffff;
+  }
+
+ul {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  gap : 20px;
+  width: 50%;
+  height: 50%;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 0 auto;
+  margin-bottom: 50px;
+  margin-top: 30px;
+  overflow-y: auto;
+  padding: 0;
+
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.team-title {
+  font-size: 50px;
+  text-align: center;
+  margin: 0;
+  padding: 30px 0;
 }
